@@ -1,5 +1,7 @@
 17 September 2007
 
+* Change POP3 old/new mail to work from a list of mail-to-fetch and only ask
+  for that mail, rather than retrieving and checking every mail UID.
 * Quote IMAP folder name to allow spaces and so on. SF bug 1791056.
 
 05 September 2007
@@ -646,4 +648,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.160 2007-09-17 07:21:13 nicm Exp $
+$Id: CHANGES,v 1.161 2007-09-18 09:24:30 nicm Exp $
